welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:2: error: reassignment to val
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {if ((12<a)&&(a<20)) {c=c+1} 
                                                                      ^countTeen:3: error: reassignment to val
                                                if ((12<b)&&(b<20)) {c=c+1} 
                                                                      ^countTeen:4: error: reassignment to val
                                                if ((12<c)&&(c<20)) {c=c+1} 
                                                                      ^countTeen:5: error: reassignment to val
                                                if ((12<d)&&(d<20)) {c=c+1} 
                                                                      ^