welcome.lessons.welcome.bat.bool1.CountTeen.scala.code
var c:Int=0
def countTeen(a:Int, b:Int,c:Int,d:Int): Int = {if ((12<a)&&(a<20)) {c=c+1} 
                                                if ((12<b)&&(b<20)) {c=c+1} 
                                                if ((12<c)&&(c<20)) {c=c+1} 
                                                if ((12<d)&&(d<20)) {c=c+1} 
                                                return c}